# beads

./: .buildflags  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.fork.yml  .goreleaser.yml  .plan  .pre-commit-config.yaml  .test-skip  AGENTS.md  AGENT_INSTRUCTIONS.md  ARTICLES.md  BASELINE_PERFORMANCE.md  BD-3S8-CHANGES.md  BENCHMARKS.md  BLOG_PITCH_WESTWORLD.md  BLOG_POST_SHADOWBOOK_WESTWORLD.html  BLOG_POST_SHADOWBOOK_WESTWORLD.md  BUG_MULTI_REPO_ROUTING.md  CHANGELOG.md  CI_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_PR_GUIDELINES.md  Cargo.toml  DIFFERENCES.md  DOLT_REMOTE.md  Dockerfile  Dockerfile.agent-controller  DocsOverview.md  EXTENDING.md  FEDERATION-SETUP.md  FIX_PLAN.md  FIX_SUMMARY.md  HANDOFF-template-redesign.md  IMPLEMENTATION_COMPLETE.md  LEGACY_DB_FIX_PROPOSAL.md  Makefile  (+49 more)
.beads/: .gitignore  BD_GUIDE.md  beads.jsonl  config.yaml  current-issue  deletions.jsonl  deletions.jsonl.migrated  dump.sql  interactions.jsonl  issues.jsonl  issues.jsonl.backup  last-touched  metadata.json  sync-state.json
.beads-hooks/: post-checkout  pre-commit  pre-push
.claude/: HANDOFF.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.kn/: entries.jsonl
.rwx/: ci.yml  docker.yml  helm.yml  image.yml  release.yml
.saved-stashes/: beads-stash0-telemetry-comments.patch  beads-stash1-log-rotation.patch  beads-stash2-version-bump.patch
4s0gi63sjdfomqff5dtdnhjn8k2g7qco.darc/: 0006
_bmad-output/: architecture.md  epics.md  implementation-readiness-report-2025-12-30.md  prd.md  project-context.md  (+3 more)
bd/: Cargo.toml
bd/src/: main.rs  storage.rs  types.rs
bd/src/storage/: sqlite.rs  sqlite_schema.sql
(+3645 files in other folders)
