[workspace]
members = ["bd"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Beads Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/steveyegge/beads"

[workspace.dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (for daemon)
tokio = { version = "1.42", features = ["full"] }

# File watching
notify = "7.0"

# Configuration
config = "0.14"

# Logging
env_logger = "0.11"
log = "0.4"

# Terminal colors
colored = "2.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID and hashing
sha2 = "0.10"
hex = "0.4"

# File locking
fs2 = "0.4"

# Testing
proptest = "1.5"

# Async
async-trait = "0.1"
